# Entrance

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSES.md  README.md  TRADEMARKS.md  entrance.key.pub  index.html  launcher.html  package.json  pnpm-lock.yaml  tsconfig.json  updater.json  vite.config.ts
oracles/: dialog.md  feedback.md  oracle.md
releases/: package-headless-alpha.ps1
specs/: README.md
src/: App.css  App.tsx  LauncherWindow.css  LauncherWindow.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0000_create_core_tables.sql  0001_create_plugin_launcher_apps.sql  0002_create_plugin_forge_tasks.sql  0003_create_plugin_vault_tables.sql  0004_create_plugin_forge_task_logs.sql  0005_create_core_landing_tables.sql  0006_create_plugin_forge_dispatch_receipts.sql  0007_create_core_nota_runtime_tables.sql  0008_create_core_nota_do_runtime_tables.sql  0009_create_core_decision_links.sql  0010_create_core_chat_archive_tables.sql  0011_create_core_nota_runtime_allocations.sql
src-tauri/migrations/core/: V001__initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: action.rs  bootstrap_mcp_cycle.rs  chat_archive.rs  config_store.rs  data_store.rs  design_governance.rs  event_bus.rs  hotkey.rs  hygiene.rs  landing.rs  logging.rs  mcp_server.rs  mcp_stdio_client.rs  mod.rs  nota_runtime.rs  permission.rs  plugin_manager.rs  recovery.rs  supervision.rs  theme.rs  updater.rs  window.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/forge/: commands.rs  engine.rs  http.rs  mod.rs
src-tauri/src/plugins/launcher/: mod.rs  scanner.rs  search.rs
src-tauri/src/plugins/vault/: commands.rs  crypto.rs  mod.rs
src-tauri/tests/: bootstrap_assets.rs  forge_cli.rs  hygiene_cli.rs  landing_cli.rs  mcp_http.rs  mcp_stdio.rs  nota_cli.rs  recovery_cli.rs  startup.rs
(+83 files in other folders)
