[package]
name = "entrance"
version = "0.3.1-headless-alpha.1"
description = "Entrance V0 headless alpha runtime shell"
authors = ["Entrance Contributors"]
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "entrance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["http1", "json", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "5"
futures-core = "0.3"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
strsim = "0.11"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
tokio = { version = "1.50.0", features = ["io-util", "net", "process", "sync"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
lnk = "0.6"
winreg = "0.56"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
ureq = { version = "2.10", features = ["json"] }
